# site-canary

./: .gitignore  README.md  pyproject.toml
canary/: __init__.py  __main__.py  cli.py  config.py  log.py
canary/assessor/: __init__.py  metrics.py  run.py  sources.py
canary/landing/: __init__.py  fingerprint.py  kit.py  sample_payload.py
canary/policy/: __init__.py  engine.py  epic.yaml  loader.py
canary/store/: __init__.py  apps.py  ingest.py  models.py  standalone.py  urls.py  views.py
canary/store/migrations/: 0001_initial.py  0002_alter_queue_site_passivesample.py  0003_verdict_statuschange_and_more.py
canary/store/templates/canary/: canary_page.html
docs/: DESIGN.md  IMPLEMENTATION.md  PLAN.md  SWF_INTEGRATION.md
scripts/: fetch_prmon.sh  storectl.py  webdev.py
scripts/devweb/: __init__.py
scripts/devweb/templates/: base.html
scripts/devweb/templatetags/: swf_fmt.py
tests/: run_tests.sh  test_basic.py
