[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "site-canary"
version = "0.1.0"
description = "Site health testing and capability assessment for PanDA processing resources"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
dependencies = [
    "python-decouple>=3.8",
]

[project.scripts]
canary = "canary.cli:main"

[tool.setuptools.packages.find]
include = ["canary*"]
